[gd_scene load_steps=6 format=2]

[ext_resource path="res://money_managers/price_display/price_display.gd" type="Script" id=1]
[ext_resource path="res://assets/gold.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Yagitudeh.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.1628, 36.5449 )

[node name="PriceDisplay" type="Node2D"]
script = ExtResource( 1 )

[node name="Display" type="Node2D" parent="."]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="Display"]
margin_left = -84.0
margin_top = -31.0
margin_right = 84.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 63.6726, 32.4997 )
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayedCurrency" type="TextureRect" parent="Display/HBoxContainer"]
margin_left = 61.0
margin_right = 93.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="DisplayedPrice" type="Label" parent="Display/HBoxContainer"]
margin_left = 97.0
margin_top = 19.0
margin_right = 106.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverChecker"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="FadeTween" type="Tween" parent="."]

[connection signal="mouse_entered" from="HoverChecker" to="." method="_on_HoverChecker_mouse_entered"]
[connection signal="mouse_exited" from="HoverChecker" to="." method="_on_HoverChecker_mouse_exited"]
